--- a/src/app/pages/sku-management/product/create/product-create.component.html
+++ b/src/app/pages/sku-management/product/create/product-create.component.html
@@ -35,7 +35,7 @@
                   </mat-error>
                 </mat-form-field>
                 <mat-form-field fxFlex="100" class="is-light form-primary">
-                  <input matInput type="text" placeholder="Barcode" formControlName="barcode" readonly>
+                  <input matInput type="text" placeholder="{{'manajemen_barang_sku.produk.text5' | translate}}" formControlName="barcode" readonly>
                 </mat-form-field>
                 <mat-form-field fxFlex="100" class="is-light form-primary">
                   <!-- <mat-select placeholder="{{'manajemen_barang_sku.produk.text6' | translate}}" formControlName="brand">
