--- a/src/app/pages/dte/coin-adjustment-approval/detail/approval-history/approval-history.component.html
+++ b/src/app/pages/dte/coin-adjustment-approval/detail/approval-history/approval-history.component.html
@@ -4,22 +4,22 @@
     [reorderable]="reorderable" [selectionType]="'checkbox'" [count]="pagination.total" [limit]="pagination.per_page"
     [offset]="offsetPagination" [externalPaging]="true" [externalSorting]="true">
 
-    <ngx-datatable-column name="Date" [width]="25" [sortable]="false">
+    <ngx-datatable-column name="{{'global.label.date' | translate}}" [width]="25" [sortable]="false">
       <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
         <span class="row-name">{{ row.responded_at }}</span>
       </ng-template>
     </ngx-datatable-column>
-    <ngx-datatable-column name="Status" [width]="25" [sortable]="false">
+    <ngx-datatable-column name="{{'global.label.status' | translate}}" [width]="25" [sortable]="false">
       <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
         <span class="row-name">{{ row.status ? row.status : '-' }}</span>
       </ng-template>
     </ngx-datatable-column>
-    <ngx-datatable-column name="Person" [width]="100" [sortable]="false">
+    <ngx-datatable-column name="{{'dte.approval_coin_adjustment.person' | translate}}" [width]="100" [sortable]="false">
       <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
         <span class="row-name">{{ row.user_name }}</span>
       </ng-template>
     </ngx-datatable-column>
-    <ngx-datatable-column name="Note" [width]="200" [sortable]="false">
+    <ngx-datatable-column name="{{'global.label.note' | translate}}" [width]="200" [sortable]="false">
       <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
         <span class="row-name">{{ row.reason }}</span>
       </ng-template>
