--- a/src/app/pages/dte/coin-disburstment/index/import-exchange-coin/import-exchange-coin.component.html
+++ b/src/app/pages/dte/coin-disburstment/index/import-exchange-coin/import-exchange-coin.component.html
@@ -37,17 +37,17 @@
       <table class="table">
         <thead>
           <tr>
-            <th nowrap>Nama Program Penukaran</th>
-            <th nowrap>Customer Code</th>
-            <th nowrap>Opsi Penukaran</th>
-            <th nowrap>Bank</th>
-            <th nowrap>Nomor Rekening</th>
-            <th nowrap>Nama Pemilik Rekening</th>
-            <th nowrap>Akun Pojok Bayar</th>
-            <th nowrap>Status Pembayaran</th>
-            <th nowrap>Nominal Pembayaran</th>
-            <th nowrap>Tanggal Pembayaran</th>
-            <th nwrap>Alasan</th>
+            <th nowrap>{{'dte.coin_disbursement.text2' | translate}}</th>
+            <th nowrap>{{'retailer.list.text7' | translate}}</th>
+            <th nowrap>{{'dte.coin_disbursement.text14' | translate}}</th>
+            <th nowrap>{{'global.label.bank_name' | translate}}</th>
+            <th nowrap>{{'global.label.bank_account_number' | translate}}</th>
+            <th nowrap>{{'global.label.bank_account_name' | translate}}</th>
+            <th nowrap>{{'dte.coin_disbursement.pay_corner_account' | translate}}</th>
+            <th nowrap>{{'global.label.payment_status' | translate}}</th>
+            <th nowrap>{{'dte.coin_disbursement.payment_amount' | translate}}</th>
+            <th nowrap>{{'katalog_src.lihat_pesanan.text17' | translate}}</th>
+            <th nwrap>{{'dte.approval_coin_adjustment.reason' | translate}}</th>
           </tr>
         </thead>
         <tbody>
@@ -103,7 +103,7 @@
         <button type="button" mat-raised-button color="primary" (click)="submit()"
           [disabled]="!is_valid || rows.length === 0">{{ls.locale.global.button.send}}</button>
         <button type="button" mat-stroked-button color="primary" (click)="dialogRef.close()"
-          [disabled]="uploading">Batal</button>
+          [disabled]="uploading">{{'global.button.cancel' | translate}}</button>
       </div>
     </div>
   </div>
