--- a/src/app/pages/dte/pengaturan-attribute-misi/index/dialog-create/dialog-create.component.html
+++ b/src/app/pages/dte/pengaturan-attribute-misi/index/dialog-create/dialog-create.component.html
@@ -1,26 +1,26 @@
 <form [formGroup]="form" (ngSubmit)="submit(form)">
-  <h1 mat-dialog-title>Buat {{ dataProps.title }}</h1>
+  <h1 mat-dialog-title>{{'global.label.create_entity' | translate:titleParam}}</h1>
   <mat-dialog-content>
     <mat-form-field>
       <input
         matInput
         formControlName="name"
-        placeholder="Nama {{ dataProps.title }}"
+        placeholder="{{'dte.pengaturan_attribute_misi.internal_category_name' | translate}}"
         required
       />
-      <mat-error *ngIf="form.invalid">Nama harus diisi</mat-error>
+      <mat-error *ngIf="form.invalid">{{'dte.pengaturan_attribute_misi.internal_category_name' | translate}} {{'global.messages.mandatory_text' | translate}}</mat-error>
     </mat-form-field>
     <div *ngIf="condition === true">
       <small class="form-text text-danger" *ngIf="condition === true">
         <p style="color: red">
-          Nama {{ dataProps.title }} sudah ada, silahkan input nama lain
+          {{'dte.pengaturan_attribute_misi.internal_category_name_exists' | translate}}
         </p>
       </small>
     </div>
   </mat-dialog-content>
 
   <div class="my-12" fxLayout="column" fxLayoutGap="4px" *ngIf="isColor">
-    <span><strong>Warna copywriting</strong></span>
+    <span><strong>{{'dte.pengaturan_attribute_misi.copywriting_color' | translate}}</strong></span>
     <input
       id="colorCopywriting"
       type="color"
@@ -29,14 +29,14 @@
   </div>
 
   <mat-dialog-actions>
-    <button mat-raised-button color="success" type="submit">Simpan</button>
+    <button mat-raised-button color="success" type="submit">{{'global.button.save' | translate}}</button>
     <button
       mat-raised-button
       color="warn"
       type="button"
       (click)="dialogRef.close()"
     >
-      Batal
+      {{'global.button.cancel' | translate}}
     </button>
   </mat-dialog-actions>
 </form>
