--- a/src/app/pages/dte/pengaturan-attribute-misi/index/dialog-kategori-misi-edit/dialog-kategori-misi-edit.component.html
+++ b/src/app/pages/dte/pengaturan-attribute-misi/index/dialog-kategori-misi-edit/dialog-kategori-misi-edit.component.html
@@ -1,32 +1,32 @@
 <form [formGroup]="form" (ngSubmit)="submit(form)">
-  <h1 mat-dialog-title>Edit Kategori Misi</h1>
+  <h1 mat-dialog-title>{{'global.label.edit_entity' | translate:titleParam}}</h1>
   <mat-dialog-content>
     <mat-form-field style="width: 100%;">
       <input
         matInput
         formControlName="name"
-        placeholder="Nama Kategori Misi"
+        placeholder="{{'dte.pengaturan_attribute_misi.category_mission_name' | translate}}"
         value="{{name}}"
         required
         name="name"
       />
     </mat-form-field>
     <mat-form-field style="width: 100%;">
-      <mat-select placeholder="Pilih Status" formControlName="status">
-        <mat-option value="active">Aktif</mat-option>
-        <mat-option value="inactive">Tidak Aktif</mat-option>
+      <mat-select placeholder="{{'dte.pengaturan_attribute_misi.text10' | translate}}" formControlName="status">
+        <mat-option value="active">{{'global.label.active' | translate}}</mat-option>
+        <mat-option value="inactive">{{'global.label.inactive' | translate}}</mat-option>
       </mat-select>
     </mat-form-field>
   </mat-dialog-content>
   <mat-dialog-actions>
-    <button mat-raised-button color="success" type="submit">Simpan</button>
+    <button mat-raised-button color="success" type="submit">{{'global.button.save' | translate}}</button>
     <button
       mat-raised-button
       color="warn"
       type="button"
       (click)="dialogRef.close()"
     >
-      Batal
+      {{'global.button.cancel' | translate}}
     </button>
   </mat-dialog-actions>
 </form>
