--- a/src/app/pages/dte/pengaturan-attribute-misi/index/list-internal-misi/list-internal-misi.component.html
+++ b/src/app/pages/dte/pengaturan-attribute-misi/index/list-internal-misi/list-internal-misi.component.html
@@ -37,7 +37,7 @@
             <p class="status text-truncate h6 p-4"
               style="min-width: 100px !important;min-height: 20px;text-align: center;font-size: .9em;border-radius: 3px; text-transform: uppercase;"
               [ngClass]="row.status == 'active' ? 'mat-green-800-bg' : 'mat-red-900-bg'">
-              {{row.status == 'active' ? 'Aktif' : 'Tidak Aktif'}}
+              {{row.status == 'active' ? ('global.label.active' | translate) : ('global.label.inactive' | translate)}}
             </p>
           </div>
         </ng-template>
@@ -58,7 +58,7 @@
               <mat-icon>delete</mat-icon>
             </button> -->
             <button mat-icon-button color="primary"
-              matTooltip="Hapus Internal Kategori" [disabled]="row.status === 'active'" (click)="deleteInternalMisi(row.id)">
+              matTooltip="{{'dte.pengaturan_attribute_misi.delete_internal_category' | translate}}" [disabled]="row.status === 'active'" (click)="deleteInternalMisi(row.id)">
               <mat-icon>delete</mat-icon>
             </button>
           </div>
