--- a/src/app/pages/dte/pengaturan-attribute-misi/index/list-kategori-toolbox/list-kategori-toolbox.component.html
+++ b/src/app/pages/dte/pengaturan-attribute-misi/index/list-kategori-toolbox/list-kategori-toolbox.component.html
@@ -10,12 +10,12 @@
       type="button"
       (click)="openDialogToolbox()"
     >
-      <mat-icon>add</mat-icon> BUAT
+      <mat-icon>add</mat-icon> {{'global.button.create' | translate}}
     </button>
   <!-- </div> -->
   <div class="table-wrapper">
     <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
-      <h2 class="pl-8">Kategori Toolbox</h2>
+      <h2 class="pl-8">{{'dte.pengaturan_attribute_misi.text2' | translate}}</h2>
       <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
         <mat-icon>search</mat-icon>
         <mat-form-field class="is-light tab-search">
@@ -37,19 +37,19 @@
         </ng-template>
       </ngx-datatable-column>
 
-      <ngx-datatable-column [width]="100" name="Status" prop="status">
+      <ngx-datatable-column [width]="100" name="{{'global.label.status' | translate}}" prop="status">
         <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
           <div class="name-container">
             <p class="status text-truncate h6 p-4"
               style="min-width: 100px !important;min-height: 20px;text-align: center;font-size: .9em;border-radius: 3px; text-transform: uppercase;"
               [ngClass]="row.status == 'active' ? 'mat-green-800-bg' : 'mat-red-900-bg'">
-              {{row.status == 'active' ? 'Aktif' : 'Tidak Aktif'}}
+              {{row.status == 'active' ? ('global.label.active' | translate) : ('global.label.inactive' | translate)}}
             </p>
           </div>
         </ng-template>
       </ngx-datatable-column>
 
-      <ngx-datatable-column [width]="130" name="Tindakan" headerClass="textright" [sortable]="false">
+      <ngx-datatable-column [width]="130" name="{{'global.label.action' | translate}}" headerClass="textright" [sortable]="false">
         <ng-template ngx-datatable-cell-template let-row="row" let-value="value"
           style="justify-content: center !important">
           <div class="button-row" style="margin-left: -10px">
@@ -64,7 +64,7 @@
               <mat-icon>delete</mat-icon>
             </button> -->
             <button mat-icon-button color="primary"
-              matTooltip="Hapus Kategori Toolbox" [disabled]="row.status === 'active'" (click)="deleteKategoriToolbox(row.id)">
+              matTooltip="{{'dte.pengaturan_attribute_misi.text12' | translate}}" [disabled]="row.status === 'active'" (click)="deleteKategoriToolbox(row.id)">
               <mat-icon>delete</mat-icon>
             </button>
           </div>
